# bit7z-rs

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  Cargo.toml  README.md  build.rs  vcpkg-configuration.json  vcpkg.json
cpp/: bridge.cpp  bridge.hpp  implementations.cpp  implementations.hpp
include/: cxx.h  json.hpp
src/: lib.rs  main.rs
