[package]
name = "bit7z"
version = "0.1.0"
edition = "2021"
authors = ["Cyan Yan <cyan_cg@outlook.com>"]
description = "7z Rust Wrapper"
default-run = "bit7z"

[[bin]]
name = "bit7z"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = []
cli = ["dep:clap"] 

[dependencies]
cxx = "1.0"
clap = { version = "4.0", optional = true, features = ["derive"] } 
anyhow = "1.0.93"

[build-dependencies]
cxx-build = "1.0"
vcpkg = "0.2"
